# STViewer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: github_prep.md  release_v0.1.0.md  tutorial.md  usage.md
examples/: example_spatial.csv
scripts/: install_linux.sh  start.sh
src/stviewer/: __main__.py  app.py  cli.py  core.py
tests/: test_core.py
