[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stviewer"
version = "0.1.0"
description = "Lightweight spatial transcriptomics viewer for Linux and macOS"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Angela" }
]
dependencies = [
  "streamlit>=1.35",
  "pandas>=2.0",
  "plotly>=5.20"
]

[project.urls]
Homepage = "https://github.com/shaoyu1230/STViewer"
Issues = "https://github.com/shaoyu1230/STViewer/issues"

[project.scripts]
stviewer = "stviewer.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
